syntax = "proto3";

package com.ecommerce.cart;

option java_multiple_files = true;
option java_package = "com.ecommerce.cart";
option java_outer_classname = "CartProto";

service CartService {
  rpc GetCart(CartRequest) returns (CartResponse) {}
  rpc GetCartByUserId(UserCartRequest) returns (CartResponse) {}
  rpc AddItemToCart(AddItemRequest) returns (CartResponse) {}
  rpc UpdateCartItem(UpdateItemRequest) returns (CartResponse) {}
  rpc RemoveCartItem(RemoveItemRequest) returns (CartResponse) {}
  rpc ClearCart(CartRequest) returns (CartResponse) {}
  rpc ApplyCoupon(ApplyCouponRequest) returns (CartResponse) {}
  rpc RemoveCoupon(CartRequest) returns (CartResponse) {}
}

message CartRequest {
  string id = 1;
}

message UserCartRequest {
  string user_id = 1;
}

message AddItemRequest {
  string cart_id = 1;
  string product_id = 2;
  string variant_id = 3;
  int32 quantity = 4;
}

message UpdateItemRequest {
  string cart_id = 1;
  string item_id = 2;
  int32 quantity = 3;
}

message RemoveItemRequest {
  string cart_id = 1;
  string item_id = 2;
}

message ApplyCouponRequest {
  string cart_id = 1;
  string coupon_code = 2;
}

message CartResponse {
  string id = 1;
  string user_id = 2;
  repeated CartItemResponse items = 3;
  string coupon_code = 4;
  double subtotal = 5;
  double discount = 6;
  double total = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CartItemResponse {
  string id = 1;
  string product_id = 2;
  string product_name = 3;
  string product_slug = 4;
  string product_image = 5;
  string variant_id = 6;
  string variant_name = 7;
  double price = 8;
  int32 quantity = 9;
  double total = 10;
} 